# dalotia_evaluation

./: CMakeLists.txt
.github/workflows/: cmake.yaml
benchmarks/: CMakeLists.txt  generate_models.py  python_jit_inference.py
benchmarks/DeepRLEddy/: CMakeLists.txt  deeprleddy.cpp  deeprleddy.f03  deeprleddy.f90  output_DeepRLEddyNet.safetensors  traced_DeepRLEddyNet.pt  weights_DeepRLEddyNet.safetensors
benchmarks/NeuralClosure/: CMakeLists.txt  LICENSE_KiT-RT  neuralClosure.cpp
benchmarks/SubgridLES/: CMakeLists.txt  input_SubgridLESNet.safetensors  output_SubgridLESNet.safetensors  subgridLES.cpp  subgridLES.f03  subgridLES.f90  traced_SubgridLESNet.pt  weights_SubgridLESNet.safetensors
benchmarks/mnist/: CMakeLists.txt  mnist.cpp  mnist.f03  mnist_fugaku.pt  mnist_trace_torch.py
cacheflush/: CMakeLists.txt  cacheflush.c  cacheflush.h
cmake/: pytorch_cmake_no_force_cache.patch
tools/: count_pinatrace_addresses.py  extract_avg_runtimes.py  extract_avg_values.py
